Fix password reset style on mobile

--- a/src/site/styles/_accountForms.scss
+++ b/src/site/styles/_accountForms.scss
@@ -12,6 +12,12 @@
         .btn {
             margin: 0px 10px;
         }
+        @include media-breakpoint-down(md) {
+            flex-direction: column;
+            .btn {
+                margin: 10px 0px;
+            }
+        }
     }
 }
 
